force-app/main/default/objects/Flghts_Dates__c/Flghts_Dates__c.object-meta.xml
<CustomObject>
    <label>Flghts Dates</label>
    <nameField>
        <displayFormat>FD-{00000}</displayFormat>
        <label>Flghts Dates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flghts Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>