force-app/main/default/objects/Flghts_Dates__c/fields/Ex_ADL__c.field-meta.xml
<CustomField>
    <fullName>Ex_ADL__c</fullName>
    <label>Ex ADL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>