force-app/main/default/objects/Flghts_Dates__c/fields/High_Season__c.field-meta.xml
<CustomField>
    <fullName>High_Season__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Season</label>
    <type>Checkbox</type>
</CustomField>