force-app/main/default/objects/Flghts_Dates__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Flghts Dates</relationshipLabel>
    <relationshipName>Flghts_Dates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>